--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -15,12 +15,43 @@
         <div class="flex flex-col sm:flex-row sm:items-center py-2 md:py-0 sm:ps-7">
 
             @for(route of rotesUrl; track route.id){
-              <a class="py-3 ps-px sm:px-3 sm:py-6 font-medium"
+              @if(!route.subroutes.length){
+                <a class="py-3 ps-px sm:px-3 sm:py-6 font-medium"
                 [routerLink]="[route.url]"
                 routerLinkActive="text-blue-500"
                 [ngClass]="{ 'text-gray-400': !isActive(route.url) }"
                 >{{route.title}}</a>
+              } @else { 
+                <div class="hs-dropdown [--strategy:static] sm:[--strategy:fixed] [--adaptive:none] sm:[--trigger:hover] py-3 ps-px sm:px-3">
+                  <button type="button" class="flex items-center w-full text-gray-400 hover:text-gray-400 font-medium dark:text-neutral-400 dark:hover:text-neutral-500">
+                    {{ route.title }}
+                    <svg class="ms-2 size-2.5 text-gray-500 dark:text-neutral-500" width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M2 5L8.16086 10.6869C8.35239 10.8637 8.64761 10.8637 8.83914 10.6869L15 5" stroke="currentColor" stroke-width="2" stroke-linecap="round"></path>
+                    </svg>
+                  </button>
+        
+                  <div class="hs-dropdown-menu transition-[opacity,margin] duration-[0.1ms] sm:duration-[150ms] hs-dropdown-open:opacity-100 opacity-0 sm:w-48 hidden z-10 bg-white sm:shadow-md rounded-lg p-2 dark:bg-neutral-800 sm:dark:border dark:border-neutral-700 dark:divide-neutral-700 before:absolute top-full sm:border before:-top-5 before:start-0 before:w-full before:h-5">
+                    @for(sub of route.subroutes; track sub.id){
+                      <a [id]="sub.id" class="flex items-center gap-x-3.5 py-2 px-3 rounded-lg text-sm text-gray-800 hover:bg-gray-100 focus:ring-2 focus:ring-blue-500 dark:text-neutral-400 dark:hover:bg-neutral-700 dark:hover:text-neutral-300" [routerLink]="[sub.url]" routerLinkActive="text-blue-500">
+                        {{ sub.title }}
+                      </a>
+                    }
+                    
+        
+                    <!-- <a class="flex items-center gap-x-3.5 py-2 px-3 rounded-lg text-sm text-gray-800 hover:bg-gray-100 focus:ring-2 focus:ring-blue-500 dark:text-neutral-400 dark:hover:bg-neutral-700 dark:hover:text-neutral-300" href="#">
+                      Downloads
+                    </a>
+                    <a class="flex items-center gap-x-3.5 py-2 px-3 rounded-lg text-sm text-gray-800 hover:bg-gray-100 focus:ring-2 focus:ring-blue-500 dark:text-neutral-400 dark:hover:bg-neutral-700 dark:hover:text-neutral-300" href="#">
+                      Team Account
+                    </a> -->
+                  </div>
+                </div>
+              }
             }
+
+
+
+
 
           <div class="flex items-center gap-x-2 py-2 sm:py-0 sm:ms-auto hs-tooltip [--trigger:hover]">
             <span class="hs-tooltip-toggle inline-flex items-center gap-x-1.5 py-1.5 px-3 rounded-full text-xs font-medium bg-gray-100 text-gray-800 dark:bg-blue-800/30 dark:text-blue-500">
