--- a/src/app/shared/components/form/input/input.component.html
+++ b/src/app/shared/components/form/input/input.component.html
@@ -119,7 +119,7 @@
         </label>
         <div class="" [formGroup]="formGroup">
             <select [formControlName]="control" [class]="isInvalid(control) ? errorClass : normalClass">
-                <option disabled>Choose one Option</option>
+                <option disabled>Selecciona una opción</option>
                 <option [disabled]="readonly" *ngFor="let option of selectOption" [value]="option.value">
                     {{ option.label }}
                 </option>
