--- a/src/app/shared/components/table-train-ai/table-train-ai.component.html
+++ b/src/app/shared/components/table-train-ai/table-train-ai.component.html
@@ -1,4 +1,27 @@
 <div class="max-w-[85rem] px-4 py-10 sm:px-6 lg:px-8 lg:py-14 mx-auto">
+
+  @if(messageNeedConfig){
+    <div class="bg-blue-50 border mb-8 border-blue-200 text-sm text-blue-600 rounded-lg p-4 dark:bg-white/10 dark:border-white/10 dark:text-blue-400" role="alert">
+      <div class="flex">
+        <div class="flex-shrink-0">
+          <svg class="flex-shrink-0 size-4 mt-0.5" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+            <circle cx="12" cy="12" r="10"></circle>
+            <path d="M12 16v-4"></path>
+            <path d="M12 8h.01"></path>
+          </svg>
+        </div>
+        <div class="flex-1 md:flex md:justify-between ms-2">
+          <p class="text-sm">
+            Aun no configuras tu entorno, configuralo y vuelve para crear nuevos docuemntos de entrenamiento. 
+          </p>
+          <p class="text-sm mt-3 md:mt-0 md:ms-6">
+            <a class="text-gray-800 hover:text-gray-500 font-medium whitespace-nowrap dark:text-neutral-200 dark:hover:text-neutral-400" href="/configuration">Ir a configuración</a>
+          </p>
+        </div>
+      </div>
+    </div>
+  }
+
     <!-- Card -->
     <div class="flex flex-col">
       <div class="-m-1.5 overflow-x-auto">
@@ -48,7 +71,7 @@
 
               <tbody class="divide-y divide-gray-200 dark:divide-neutral-700">
 
-                @if(lodingRow && !finetunings.length){
+                @if(!messageNeedConfig && lodingRow && !finetunings.length){
                   <tr>
                     <td class="w-full h-4 bg-gray-200 rounded animate-pulse dark:bg-neutral-700"></td>
                     <td class="w-full h-4 bg-gray-200 rounded animate-pulse dark:bg-neutral-700"></td>
