--- a/src/app/shared/components/table-train-docs/table-train-docs.component.html
+++ b/src/app/shared/components/table-train-docs/table-train-docs.component.html
@@ -1,4 +1,26 @@
 <div class="max-w-[85rem] px-4 py-10 sm:px-6 lg:px-8 lg:py-14 mx-auto">
+
+  @if(messageNeedConfig){
+    <div class="bg-blue-50 border mb-8 border-blue-200 text-sm text-blue-600 rounded-lg p-4 dark:bg-white/10 dark:border-white/10 dark:text-blue-400" role="alert">
+      <div class="flex">
+        <div class="flex-shrink-0">
+          <svg class="flex-shrink-0 size-4 mt-0.5" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+            <circle cx="12" cy="12" r="10"></circle>
+            <path d="M12 16v-4"></path>
+            <path d="M12 8h.01"></path>
+          </svg>
+        </div>
+        <div class="flex-1 md:flex md:justify-between ms-2">
+          <p class="text-sm">
+            Aun no configuras tu entorno, configuralo y vuelve para crear nuevos docuemntos de entrenamiento. 
+          </p>
+          <p class="text-sm mt-3 md:mt-0 md:ms-6">
+            <a class="text-gray-800 hover:text-gray-500 font-medium whitespace-nowrap dark:text-neutral-200 dark:hover:text-neutral-400" href="/configuration">Ir a configuración</a>
+          </p>
+        </div>
+      </div>
+    </div>
+  }
     <!-- Card -->
     <div class="flex flex-col">
       <div class="-m-1.5 overflow-x-auto">
@@ -43,58 +65,8 @@
                       </div>
                     </th>
                   }
-                  
-  
-                  <!-- <th scope="col" class="px-6 py-3 text-start">
-                    <div class="flex items-center gap-x-2">
-                      <span class="text-xs font-semibold uppercase tracking-wide text-gray-800 dark:text-neutral-200">
-                        Modelo Genrador
-                      </span>
-                    </div>
-                  </th>
-  
-                  <th scope="col" class="px-6 py-3 text-start">
-                    <div class="flex items-center gap-x-2">
-                      <span class="text-xs font-semibold uppercase tracking-wide text-gray-800 dark:text-neutral-200">
-                        Tokens Usados
-                      </span>
-                    </div>
-                  </th>
-  
-                  <th scope="col" class="px-6 py-3 text-start">
-                    <div class="flex items-center gap-x-2">
-                      <span class="text-xs font-semibold uppercase tracking-wide text-gray-800 dark:text-neutral-200">
-                        Estado
-                      </span>
-                    </div>
-                  </th>
-
-                  <th scope="col" class="px-6 py-3 text-start">
-                    <div class="flex items-center gap-x-2">
-                      <span class="text-xs font-semibold uppercase tracking-wide text-gray-800 dark:text-neutral-200">
-                        Archivos Base
-                      </span>
-                    </div>
-                  </th>
-  
-                  <th scope="col" class="px-6 py-3 text-start">
-                    <div class="flex items-center gap-x-2">
-                      <span class="text-xs font-semibold uppercase tracking-wide text-gray-800 dark:text-neutral-200">
-                        Creado
-                      </span>
-                    </div>
-                  </th>
-  
-                  <th scope="col" class="px-6 py-3 text-end"></th> -->
                 </tr>
               </thead>
-  
-              <!-- <tbody class="divide-y divide-gray-200 dark:divide-neutral-700">
-                @for(train of (trainings$ | async ) ; track train){
-                  
-                }
-              </tbody> -->
-              <!-- <app-table-row [trainings]="trainings"></app-table-row> -->
 
               <tbody class="divide-y divide-gray-200 dark:divide-neutral-700">
 
@@ -212,20 +184,6 @@
                   </span> resultados
                 </p>
               </div>
-  
-              <!-- <div>
-                <div class="inline-flex gap-x-2">
-                  <button type="button" class="py-2 px-3 inline-flex items-center gap-x-2 text-sm font-medium rounded-lg border border-gray-200 bg-white text-gray-800 shadow-sm hover:bg-gray-50 disabled:opacity-50 disabled:pointer-events-none dark:bg-neutral-900 dark:border-neutral-700 dark:text-white dark:hover:bg-neutral-800">
-                    <svg class="flex-shrink-0 size-4" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="m15 18-6-6 6-6"/></svg>
-                    Prev
-                  </button>
-  
-                  <button type="button" class="py-2 px-3 inline-flex items-center gap-x-2 text-sm font-medium rounded-lg border border-gray-200 bg-white text-gray-800 shadow-sm hover:bg-gray-50 disabled:opacity-50 disabled:pointer-events-none dark:bg-neutral-900 dark:border-neutral-700 dark:text-white dark:hover:bg-neutral-800">
-                    Next
-                    <svg class="flex-shrink-0 size-4" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="m9 18 6-6-6-6"/></svg>
-                  </button>
-                </div>
-              </div> -->
             </div>
             <!-- End Footer -->
           </div>
